[package]
name = "kirigami-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0.160"
cxx-qt = "0.7.2"
cxx-qt-lib = { version = "0.7.2", features = ["qt_full"] }
cxx-qt-lib-extras = "0.7.2"

[build-dependencies]
cxx-qt-build = { version = "0.7.0", features = ["link_qt_object_files"] }
